--- a/notebooks/Synthetic_results_and_plot.ipynb
+++ b/notebooks/Synthetic_results_and_plot.ipynb
@@ -106,8 +106,8 @@
     "    nzs = [int(p*percent//100) for percent in percent_values]\n",
     "    nrs = [int(p*percent//100) for percent in percent_relevent_values]\n",
     "\n",
-    "    fts_modes = [\"full\", \"random\", \"k-best\", \"lasso\", \"pk-lpnn\"]#XXXXXX\n",
-    "    models = [\"knn\", \"lr\", \"nb-gaussian\"] #XXXXXX\n",
+    "    fts_modes = [\"full\", \"random\", \"k-best\", \"lasso\", \"pk-lpnn\"]\n",
+    "    models = [\"knn\", \"lr\", \"nb-gaussian\"]\n",
     "        \n",
     "    results_d[p] = {}\n",
     "    \n",
