--- a/notebooks/Synthetic-2_experiments.ipynb
+++ b/notebooks/Synthetic-2_experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "31a4484c",
    "metadata": {
     "raw_mimetype": "text/x-python",
@@ -17,10 +17,10 @@
     "\n",
     "# View > Cell Toolbar > Tags: set the tag as \"parameters\"\n",
     "\n",
-    "p = 2000              # 2000  # Default value\n",
-    "n_ = 10               #  10   # Default value # Not the real n! Real n defined below...\n",
-    "percent = 2.5         # 2.5  # Default value\n",
-    "percent_relevent = 3  # 3, 5  # Defalut value"
+    "p = 4000                  # 2000  # Default value\n",
+    "n_ = 10                   #  10   # Default value # Not the real n! Real n defined below...\n",
+    "percent_relevent = 4.25   # 3, 5  # Defalut value\n",
+    "percent = 2.5             # 2.5  # Default value (varying)"
    ]
   },
   {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "80c00e25-d4df-4d14-9759-4c8fce74ae9c",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "id": "b7fd1fb7-0f9c-44e8-a1a3-9fd4cf718dc4",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "3737a25b",
    "metadata": {},
    "outputs": [],
@@ -135,10 +135,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "d36c0f0e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -157,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "id": "ace7767a",
    "metadata": {},
    "outputs": [],
@@ -167,10 +176,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "5a46513c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*** Data ***\n",
+      "Number features p:\t\t\t 4000\n",
+      "Number of observations n:\t\t 400\n",
+      "Number of relevant features n_relevant:\t 170\n",
+      "*** Model ***\n",
+      "Number of selected features N_z:\t 100\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(42)\n",
     "\n",
@@ -189,17 +211,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "e2abc297-6d64-4d5b-b3ad-b619b58ef699",
    "metadata": {},
    "outputs": [],
    "source": [
-    "results_folder = os.path.join( f\"results/synthetic_data_{p}\" ) # separate folders for different p\n",
+    "results_folder = os.path.join( f\"../results/Synthetic/synthetic_data_{p}\" ) # separate folders for different p\n",
     "\n",
     "if not os.path.exists(results_folder):\n",
     "    os.mkdir(results_folder)\n",
     "\n",
-    "results_folder = os.path.join( results_folder, f\"{n}_{n_relevant}\" )  # separate folders for different n\n",
+    "results_folder = os.path.join( results_folder, f\"{n}\" )       # separate folders for different n\n",
     "\n",
     "if not os.path.exists(results_folder):\n",
     "    os.mkdir(results_folder)\n",
@@ -222,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "1c7b5c51-7a22-4ce9-8392-37225718479f",
    "metadata": {},
    "outputs": [],
@@ -239,11 +261,11 @@
     "           ]\n",
     "\n",
     "# Choose your feature selection methods\n",
-    "fts_modes_l = [\"full\", \n",
-    "               \"random\", \n",
-    "               \"k-best\", \n",
+    "fts_modes_l = [#\"full\", \n",
+    "               #\"random\", \n",
+    "               #\"k-best\", \n",
     "               \"k-best-mi\",\n",
-    "               \"lasso\",\n",
+    "               #\"lasso\",\n",
     "               ###\"pca\", \n",
     "               # \"sparse-pca\",  # takes huge time...\n",
     "               ###\"lfs\", \n",
@@ -263,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "4ed20e53",
    "metadata": {},
    "outputs": [],
@@ -278,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "a1490b9f",
    "metadata": {},
    "outputs": [],
@@ -319,10 +341,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "acefe069",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rank of important features matrix:\t 92\n",
+      "Size of full features matrix:\t\t (200, 2000)\n"
+     ]
+    }
+   ],
    "source": [
     "data, class_labels = generate_classification_data(n=n, n_important=n_relevant, n_features=p)\n",
     "# print(\"Classification labels:\")\n",
@@ -331,10 +362,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "09c4e855",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((200, 2000), (200,))"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y = class_labels # new\n",
     "data.shape, y.shape"
@@ -342,10 +384,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "f9fa7a7d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(92)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.linalg.matrix_rank(data)"
    ]
@@ -362,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "2df87ffb-1eda-4bdd-ae04-00fa6ae75255",
    "metadata": {},
    "outputs": [],
@@ -384,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "8feda798-03cb-491f-abf0-d7c53ff788a2",
    "metadata": {},
    "outputs": [],
@@ -394,10 +447,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "7060137a-323a-482c-90cf-1fe155f4a79e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████| 10/10 [00:00<00:00, 2538.31it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# 10 times 10-fold CV\n",
     "\n",
@@ -412,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "8217b7be-7085-438f-b605-73a309d871f8",
    "metadata": {},
    "outputs": [],
@@ -422,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "d4518fa9-7df4-47bf-94fe-dfde9996f467",
    "metadata": {},
    "outputs": [],
@@ -541,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "0c4089ad-f8e9-4e13-8a8a-0185ec66a244",
    "metadata": {},
    "outputs": [],
@@ -581,19 +642,25 @@
   {
    "cell_type": "markdown",
    "id": "feb06472-c9d5-4011-a3d6-9dc05c174a52",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## All experiments except Pk-LPNN at once"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "bc09b4bc-df14-426e-9d0f-5d168b32bf93",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████| 10/10 [02:06<00:00, 12.61s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "# *** new loop ***\n",
     "# 10 times 10-fold CV: 100 experiments\n",
@@ -640,10 +707,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "16bb5a3f-67a7-46de-a471-8e35924d4835",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "************************************************************\n",
+      "*** Features mode: k-best-mi - Model: knn ***\n",
+      "Test: macro F1 (mean, std): \t\t0.6075088902421618\n",
+      "Test: balanced accuracy (mean, std): \t0.6261535894660895\n",
+      "************************************************************\n",
+      "*** Features mode: k-best-mi - Model: lr ***\n",
+      "Test: macro F1 (mean, std): \t\t0.730252374076252\n",
+      "Test: balanced accuracy (mean, std): \t0.7435655108780108\n",
+      "************************************************************\n",
+      "*** Features mode: k-best-mi - Model: svc ***\n",
+      "Test: macro F1 (mean, std): \t\t0.7201975318610995\n",
+      "Test: balanced accuracy (mean, std): \t0.7338317654567654\n",
+      "************************************************************\n",
+      "*** Features mode: k-best-mi - Model: nb-gaussian ***\n",
+      "Test: macro F1 (mean, std): \t\t0.6819348656133354\n",
+      "Test: balanced accuracy (mean, std): \t0.6946626845376846\n"
+     ]
+    }
+   ],
    "source": [
     "for fts_mode in fts_modes_l:\n",
     "\n",
@@ -658,11 +748,23 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "f8817b07-aea7-4ee1-9d82-d142e17bb266",
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "48a02067-9915-438f-82cd-df7408c68c17",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiments finished.\n"
+     ]
+    }
+   ],
    "source": [
-    "> **STOP**"
+    "# Break here to avoid Pk-LPNN experiments\n",
+    "# Comment for running all experiments\n",
+    "print(\"Experiments finished.\")"
    ]
   },
   {
@@ -677,11 +779,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "617088a3-f676-488a-83b9-937d6f86bfa9",
+   "cell_type": "raw",
+   "id": "1d0c6dac-50f1-4e12-af81-65d49c2b4c77",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Repeat 10 times:\n",
     "#   10-fold CV\n",
@@ -690,11 +790,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c5ab2116",
+   "cell_type": "raw",
+   "id": "ed55aede-2667-41ca-a7ce-135df9645e04",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Security...\n",
     "\n",
@@ -711,11 +809,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff93a60f-8e5a-42af-a9d6-3294035ddad4",
+   "cell_type": "raw",
+   "id": "61b39f89-c330-4f7d-a2e8-2d5908180c9d",
    "metadata": {},
-   "outputs": [],
    "source": [
     "def LPNN_experiment(X_train_split, y_train_split,\n",
     "                    p, Nz, k, mu_0=0.5, train_indices=None):\n",
@@ -754,11 +850,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "43c75e9d-02ef-437b-abde-f4d5f3274b9d",
+   "cell_type": "raw",
+   "id": "28024d9a-add1-4339-810e-c0792ad9ea23",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# single experiment for selected features\n",
     "\n",
@@ -814,11 +908,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fae0e91f-9119-49f2-b23b-4006877fbcd0",
+   "cell_type": "raw",
+   "id": "10ba288b-98a8-4b74-8f8d-2cb99b860f30",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# All experiments: 10 times 10-fold CV: 100 experiments\n",
     "\n",
